added backend firebase with basic goals

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_a25vd2luZy1yb2RlbnQtNjEuY2xlcmsuYWNjb3VudHMuZGV2JA
+EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyCu-TrLu6wHWaWupDafVNF9AIs9kXR787Y
+EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=personal-finance-assista-cd8f8.firebaseapp.com
+EXPO_PUBLIC_FIREBASE_PROJECT_ID=personal-finance-assista-cd8f8
+EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=personal-finance-assista-cd8f8.firebasestorage.app
+EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=538112344779
+EXPO_PUBLIC_FIREBASE_APP_ID=1:538112344779:web:ff26a082fe9f28b908514e
+EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=G-5EN5CG683X
